--- a/TheHinhPower/Areas/Admin/Views/Product/AddEdit.cshtml
+++ b/TheHinhPower/Areas/Admin/Views/Product/AddEdit.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using TheHinhPower.Areas
 @model TheHinhPower.Service.ViewModels.ProductViewModel
 <div class="wrapper theme-1-active pimary-color-green">
     <div class="tab-content">
@@ -14,25 +14,13 @@
                     <div class="panel-wrapper collapse in">
                         <div class="panel-body">
                             <div class="form-wrap">
-                                <form asp-action="AddEdit"  enctype="multipart/form-data" class="form-horizontal" method="POST">
+                                <form asp-action="AddEdit" asp-controller="Product" enctype="multipart/form-data" class="form-horizontal" method="POST">
                                     <div class="form-group mb-0">
                                         <div class="col-sm-12">
                                             <div class="row">
                                                 <div class="col-sm-3">
-                                                    <label class="control-label mb-10">Tên sản phẩm</label>
+                                                    <label class="control-label mb-10">Tên sản phẩm1</label>
                                                     <input type="text" asp-for="Name" class="form-control">
-                                                </div>
-                                                <div class="col-sm-3">
-                                                    <label class="control-label mb-10">Filled Input</label>
-                                                    <input type="text" class="form-control filled-input" value="john doe...">
-                                                </div>
-                                                <div class="col-sm-3">
-                                                    <label class="control-label mb-10">Rounded Outline Input</label>
-                                                    <input type="text" class="form-control rounded-outline-input" value="john doe...">
-                                                </div>
-                                                <div class="col-sm-3">
-                                                    <label class="control-label mb-10">Rounded filled input</label>
-                                                    <input type="text" class="form-control filled-input rounded-input" value="john doe...">
                                                 </div>
                                             </div>
                                             <button type="submit"> Thêm</button>
