--- a/TheHinhPower/Areas/Admin/Views/Product/Index.cshtml
+++ b/TheHinhPower/Areas/Admin/Views/Product/Index.cshtml
@@ -2,6 +2,16 @@
 
   
 
+    <div class="row">
+        <div class="col col-md-12">
+            <a href="/Admin/Product/abc" style="float:right !important">
+                <button type="button" class="btn btn-primary btn-icon left-icon btn-sm">
+                    <i class="fas fa-plus"></i><span>abc</span>
+                </button>
+            </a>
+        </div>
+    </div>
+
 <div class="row">
     <div class="col col-md-12">
         <a href="/Admin/Product/AddEdit" style="float:right !important">
